Fix for pagination postion on smaller screen then 992 and change color for pagination buttons

--- a/src/scss/2home.scss
+++ b/src/scss/2home.scss
@@ -71,3 +71,11 @@ nav .input-field input[type='date']:valid {
   justify-content: center;
   align-items: center;
 }
+.pagination {
+  @media only screen and (max-width: 992px) {
+    width: auto;
+  }
+}
+.pagination li.active a {
+  background-color: #ff6b08;
+}
